--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -19,5 +19,24 @@
        
   </h2> 
 
+  <!--  <nav class = "navbar navbar-expand-md navbar-light bg-info">
+           <div class="container">
+               <a class = "navbar-brand" href="#">Navbar</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class = "nav-link" href="#">Home</a>
+                </li>
+                <li>
+                    <a class = "nav-link" href="#">About</a>
+                </li>
+                <li>
+                    <a class = "nav-link" href="#">Services</a>
+                </li>
+                <li>
+                    <a class = "nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
             
-</header>
+</header>--->
