--- a/templates/views/Login.hbs
+++ b/templates/views/Login.hbs
@@ -1,17 +1,39 @@
 <html lang="en">
-
+<head> 
 
  <meta charset="utf-8">    
-                 
-                 <head><meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no"> 
-    
+           <head><meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">    
   
             <link rel="stylesheet" href="/css/styles.css">  
             <script src="../public/js/form.js"></script>
             <link rel="stylesheet" href="/css/form.css" >
 	
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
+
+  <nav class="navbar navbar fixed-top navbar-expand-sm bg-dark navbar-dark justify-content-end">
+    <a class="navbar-brand" href="/">Home</a>
+    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+        <ul class="navbar-nav text-right">
+            <li class="nav-item active">
+                <a class="nav-link" href="/Login">Login</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/partners">Partner</a>
+            </li>    
+            <li class="nav-item active">
+                <a class="nav-link" href="/clients">Clients</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/help">Help</a>
+            </li>
+            </li>
+        </ul>
+    </div>
+</nav>  
     
 
 </head>
@@ -26,7 +48,7 @@
                        
                       
            </style> 
-<!--{{>header}} -->
+
                                  
 <body>
     <form name="ctl01" method="post" action="Login.aspx" id="ctl01">
