--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,8 +3,31 @@
 <html>
     <head>
     
-        <title>About</title>            
-
+<title>About</title>            
+<nav class="navbar fixed-top navbar-expand-sm bg-dark navbar-dark justify-content-end">
+    <a class="navbar-brand" href="/">Home</a>
+    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+        <ul class="navbar-nav text-right">
+            <li class="nav-item active">
+                <a class="nav-link" href="/Login">Login</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/partners">Partner</a>
+            </li>    
+            <li class="nav-item active">
+                <a class="nav-link" href="/clients">Clients</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/help">Help</a>
+            </li>
+            </li>
+        </ul>
+    </div>
+</nav>
            
     </head>
 
