--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -129,19 +129,18 @@
          <div class="col-sm-10 " >
               <div  class="col-xs-12 col-sm-12 " style="margin-bottom:1em;" >
                                        
-                                        <div class="card">
-                                       <div  class="card-title text-center""> <b>1800-888-8888</b>
-                                            <img  src="../img/CustomerServiceDiv.png" class="card-img-top" alt="Card Image Cap">
-                                            <div class="card-body text-left" >
+                    <div class="card">
+                       <div  class="card-title text-center""> <b>1800-888-8888</b>
+                           <img  src="../img/CustomerServiceDiv.png" class="card-img-top" alt="Card Image Cap">
+                           <div class="card-body text-left" >
                                                 
-                                                  <p class="card-text">
-                                                        <i>Its easy to be approved!</span>
+                             <div class="card-text">
+                                                    <p <i>Its easy to be approved!</span>
                                                     Simply fill out our online application and one of our customer representatives will contact you as soon as possible.</i>
                                                     </p>
-                                                </div>
-                                            </div>
-                                     
-                                                <div class="col-sm-12">
+                                              
+                                    
+                                <div class="col-sm-12">
                                                     <p>
                                                         <b><i>Requirements:</i></b>
                                                         <br /><br />
@@ -153,15 +152,16 @@
                                                             <li>Processing History Statements (Optional)</li>
                                                         </ul>
                                                     </p>
-                                                </div>
+               </div>
+             </div>
+           </div>
+         </div>    
+       </div>
+     </div>
     </div>
-    
+   </div>
   </div>
 </div>
-</div>
-</div>
-
-
 
 
             
