--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -148,37 +148,40 @@
 guaranteed to increase Sales and Revenues </p></h2>
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
-              <!--=======================Solutions card===============-->
+              <!--=======================Business card===============-->
               <div class="card" > 
              <img class ="card-img-top" src="../img/import-export-beach.png" alt ="Card image Cap">
               <div class="card-body"  "tex-left">
-              <h5 class="card-title"><b>EZ Data Solutions</b></h5>
-              <div class="card bg-primary text-white"></div>
-             <p class="card-text"> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
-          with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a>
+              <h5 class="card-title"><b>Efficiency and Accuracy</b></h5>
+              <div class="card bg-info text-white text-justify">
+             <p class="card-text"> Our Secure Electronic Data Processing System allows Members to offer their customers 
+               the option of paying by Check. It improves efficiency and accuracy while providing flexibility for both 
+               members & consumers. While a lot are more comfortable with electronic payment options, there remains a large segment who still prefer to pay with checks. <a class="more_btn" href="../clients">Get Start</a>
      </p> <hr>
              </div>
-             </div>  
+             </div>             </div> 
          
     
-<!--##############################Partners card ############################-->
+<!--##############################Datda card ############################-->
  <div class="card">
     <img class="card-img-top" src="../img/vpn-neto.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title"><b>3 Ways to Make Money</b></h5>
-      <div class="card bg-primary text-white"></div>
-      <p class="card-text">There are three ways in making money with us; One is to use our Solutions as members do. 
-      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a>.
+      <h5 class="card-title"><b>Data Processing System</b></h5>
+      <div class="card bg-success text-white">
+      <p class="card-text">Our Data Processing options can help you:
+- Reduce check processing costs.
+- Reduce the risk of fraud, returned checks, and non-sufficient funds notifications.
+- Our Proprietary Payment Gateway also increases back-office efficiency. <a class="more_btn" href="../partners">Get Start</a>.
       </p> <hr>
      </div>
-     </div>
+     </div></div>
   <!--############################ Compliance card ##################################-->
 <div class="card">
     <img class="card-img-top" src="../img/energy.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title"><b>Compliance</h5></b>
-      <div class="card bg-primary text-white"></div>
-      <p class="card-text">Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn" href="../securitycenter">Learn More</a> </p>
+      <h5 class="card-title""text-center"><b>Electronic Checks</h5></b>
+      <div class="card bg-dark text-white">
+      <p class="card-text">We have three (3) check acceptance options that provide near real-time authorizations, namely, through Virtual Terminal, API or MOTO. Check2Pay can convert paper checks to electronic transactions or accept checks as you do today. Your customers are given flexibility to choose the way they want to pay. <a class="more_btn" href="../securitycenter">Learn More</a> </p>
       <hr>
 </div>
 </div>
